Fixed the display of channel indicator by adjusting z-indexes (due to article element background being recently introduced).

--- a/web/mamirc.css
+++ b/web/mamirc.css
@@ -52,7 +52,7 @@ body {
 	position: absolute;
 	bottom: 0.5rem;
 	right: 1.0rem;
-	z-index: -1;
+	z-index: 0;
 	font-size: 400%;
 	font-weight: bold;
 	color: #FFFFFF;
@@ -317,6 +317,8 @@ body.hide {  /* For log out */
 	width: 100%;
 	margin-top: 0.5em;
 	border-collapse: collapse;
+	position: relative;
+	z-index: 1;
 }
 
 #messages-scroller thead {
